@@ -52,6 +52,7 @@ Version 2.0.0 - SVN
    to differentiate between judges and admins for the web interface:
    admins will be allowed to change more of the core data.
  - Bring lib.database.php up to date with latest upstream version.
+ - Add Referential Integrity check to configchecker.
 
 Version 1.3.0 - 6 October 2006
 ------------------------------
